# untron-intents

./: .env.example  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  checkverify.sh  config.example.json  deploy.py  deploy.sh  deploy_receiver.sh  deploy_receiver_factory.sh  deploy_resolver.sh  factory.json  genbindings.sh  moccasin.toml  new.txt  old.txt  package.json  pnpm-lock.yaml  pyproject.toml  receiver.json  receivers.db  repomix-output.txt  requirements.txt  rustfmt.toml  transfers.json  verify.sh  wagmi.config.ts
.husky/: pre-push
apps/e2e/: Cargo.toml  PLAN.md
apps/e2e/src/: alto.rs  anvil.rs  binaries.rs  bundler_proxy.rs  cast.rs  docker.rs  docker_cleanup.rs  forge.rs  http.rs  lib.rs  pool_db.rs  postgres.rs  process.rs  services.rs  solver_db.rs  tronbox.rs  util.rs
apps/e2e/tests/: forwarder.rs  indexer_e2e.rs  indexer_rewind_solver_idempotent.rs  pool_indexer.rs  postgrest.rs  solver_competition_race.rs  solver_done_state_idempotent.rs  solver_global_pause.rs  solver_indexer_lag_guard.rs  solver_leasing.rs  solver_mock.rs  solver_postgrest_outage.rs  solver_profitability.rs  solver_rate_limit_and_pause.rs  solver_safe4337_already_claimed.rs  solver_safe4337_alto.rs  solver_safe4337_nonce_recovery.rs  solver_safe4337_receipt_fallback.rs  solver_safe4337_tron_grpc.rs  solver_trigger_breaker.rs  solver_trigger_policy_mock.rs  solver_tron_consolidation.rs  solver_tron_delegate_resell.rs  solver_tron_energy_rental.rs  solver_tron_grpc.rs  solver_tron_proof_sig_verified.rs  solver_tron_retry_backoff.rs  solver_usdt_tron_grpc.rs
apps/indexer/: .env.example  Cargo.toml  package.json
apps/indexer/db/migrations/: 0001_foundation_and_roles.sql  0002_ingest.sql  0003_pool.sql  0004_forwarder.sql  0005_api.sql
apps/indexer/src/: config.rs  db.rs  decode.rs  logs.rs  main.rs  rpc.rs  runner.rs  timestamps.rs
apps/solver/: Cargo.toml  PLAN.md
apps/solver/db/migrations/: 0001_init.sql  0001_schema.sql  0002_jobs.sql  0003_tron_proofs.sql  0004_hub_userops.sql  0005_circuit_breakers.sql  0006_tron_signed_txs.sql  0007_hub_userop_receipts.sql  0008_hub_userop_gas.sql  0009_intent_skips.sql  0010_tron_tx_costs.sql  0011_tron_tx_costs_intent_type.sql  0012_ops_safety.sql  0013_tron_rentals.sql  0014_rental_provider_freeze.sql  0015_claim_window_deadline.sql
apps/solver/src/: abi.rs  config.rs  db.rs  hub.rs  hub_cost.rs  indexer.rs  main.rs  metrics.rs  policy.rs  pricing.rs  runner.rs  tron_backend.rs  types.rs
apps/solver/src/config/: env.rs  load.rs  parse.rs  types.rs
apps/solver/src/db/: breakers.rs  hub_userops.rs  intents.rs  migrations.rs  proofs.rs  tron.rs
apps/solver/src/db/jobs/: core.rs  mod.rs  state.rs  transitions.rs
apps/solver/src/hub/: safe4337.rs
apps/solver/src/runner/: candidate.rs  context.rs  executor.rs  hub_flow.rs  job.rs  lease.rs  retry.rs  tron_flow.rs
apps/solver/src/runner/tron_flow/: claimed.rs  mod.rs  prepared.rs  sent.rs
apps/solver/src/tron_backend/: grpc.rs  inventory.rs  mock.rs  mod.rs  planner.rs  utils.rs
apps/solver/src/tron_backend/grpc/: emulate.rs  fetch.rs  mod.rs  prepare.rs  proof.rs
backups/: last_block_base_events.txt
contracts/: foundry.toml  remappings.txt
infra/: docker-compose.yml  indexer.env.example
relayer/: abi.json  binary  config.example.json  ecrecover.py  endpoints.py  gasless.py  recovermsg.py  relayer.py  requirements.txt  send.py  sendcompact.py  sign.py  utils.py
research/: base58decode.py  base58encode.py  resolve.py  server.py  sweep.py
script/: deploy_receiver.py  deploy_receiver_factory.py  deploy_resolver.py  deploy_transfers.py  deploy_untron_transfers.py
scripts/: e2e-retry-backoff-timed.sh
src/: ReceiverFactory.vy  UntronReceiver.vy  UntronResolver.vy  UntronTransfers.vy
tests/: conftest.py  test_untron_receiver_factory.py  test_untron_resolver.py  (+1 more)
(+80 files in other folders)
