[package]
name = "e2e"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
testcontainers = "0.23.3"
tokio = { version = "1.49.0", features = ["full"] }
