[package]
name = "e2e"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
hex = "0.4.3"
prost = "0.14.1"
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
testcontainers = "0.23.3"
tokio = { version = "1.49.0", features = ["full"] }
tron = { path = "../../crates/tron" }
aa = { path = "../../crates/aa" }
alloy = { version = "1.2.1", features = ["full"] }

[dev-dependencies]
