[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3"
hex = "0.4.3"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
tokio-util = "0.7.16"
tracing = "0.1.44"
opentelemetry = "0.31.0"
alloy = { version = "1.2.1", features = ["full", "json", "serde", "contract", "sol-types", "eip712"] }
alloy-provider = { version = "1.2", features = ["erc4337-api"] }
tokio = { version = "1.49.0", features = ["full"] }
untron-intents-bindings = { path = "../../crates/bindings" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["postgres", "migrate", "runtime-tokio-rustls"] }
