[package]
name = "solver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
prost = "0.14"
tokio-util = "0.7.16"
tracing = "0.1.44"
opentelemetry = "0.31.0"
alloy = { version = "1.2.1", features = ["full", "json", "serde", "contract", "sol-types", "eip712"] }
alloy-provider = { version = "1.2", features = ["erc4337-api"] }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres", "migrate", "macros"] }
url = "2.5.4"
tron = { path = "../../crates/tron" }
aa = { path = "../../crates/aa" }
untron-observability = { git = "https://github.com/ultrasoundlabs/untron-v3", package = "untron-observability", rev = "f392dd1" }
untron-v3-bindings = { git = "https://github.com/ultrasoundlabs/untron-v3", package = "untron-v3-bindings", rev = "f392dd1" }
untron-intents-bindings = { path = "../../crates/bindings" }
